--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -211,35 +211,35 @@
                 <div class="gimn">
 
                     <div class="text-gimn">
-                                <p id="gimn">Россия — священная наша держава,</p>
-                                <p id="gimn">Россия — любимая наша страна.</p>
-                                <p id="gimn">Могучая воля, великая слава —</p>
-                                <p id="gimn">Твоё достоянье на все времена!</p>
-                                <br>
-                                <p id="gimn">Славься, Отечество наше свободное,</p>
-                                <p id="gimn">Братских народов союз вековой,</p>
-                                <p id="gimn">Предками данная мудрость народная!</p>
-                                <p id="gimn">Славься, страна! Мы гордимся тобой!</p>
-                                <br>
-                                <p id="gimn">От южных морей до полярного края</p>
-                                <p id="gimn">Раскинулись наши леса и поля.</p>
-                                <p id="gimn">Одна ты на свете! Одна ты такая —</p>
-                                <p id="gimn">Хранимая Богом родная земля!</p>
-                                <br>
-                                <p id="gimn">Славься, Отечество наше свободное,</p>
-                                <p id="gimn">Братских народов союз вековой,</p>
-                                <p id="gimn">Предками данная мудрость народная!</p>
-                                <p id="gimn">Славься, страна! Мы гордимся тобой!</p>
-                                <br>
-                                <p id="gimn">Широкий простор для мечты и для жизни</p>
-                                <p id="gimn">Грядущие нам открывают года.</p>
-                                <p id="gimn">Нам силу даёт наша верность Отчизне.</p>
-                                <p id="gimn">Так было, так есть и так будет всегда!</p>
-                                <br>
-                                <p id="gimn">Славься, Отечество наше свободное,</p>
-                                <p id="gimn">Братских народов союз вековой,</p>
-                                <p id="gimn">Предками данная мудрость народная!</p>
-                                <p id="gimn">Славься, страна! Мы гордимся тобой!</p>
+                        <p id="gimn">Россия — священная наша держава,</p>
+                        <p id="gimn">Россия — любимая наша страна.</p>
+                        <p id="gimn">Могучая воля, великая слава —</p>
+                        <p id="gimn">Твоё достоянье на все времена!</p>
+                        <br>
+                        <p id="gimn">Славься, Отечество наше свободное,</p>
+                        <p id="gimn">Братских народов союз вековой,</p>
+                        <p id="gimn">Предками данная мудрость народная!</p>
+                        <p id="gimn">Славься, страна! Мы гордимся тобой!</p>
+                        <br>
+                        <p id="gimn">От южных морей до полярного края</p>
+                        <p id="gimn">Раскинулись наши леса и поля.</p>
+                        <p id="gimn">Одна ты на свете! Одна ты такая —</p>
+                        <p id="gimn">Хранимая Богом родная земля!</p>
+                        <br>
+                        <p id="gimn">Славься, Отечество наше свободное,</p>
+                        <p id="gimn">Братских народов союз вековой,</p>
+                        <p id="gimn">Предками данная мудрость народная!</p>
+                        <p id="gimn">Славься, страна! Мы гордимся тобой!</p>
+                        <br>
+                        <p id="gimn">Широкий простор для мечты и для жизни</p>
+                        <p id="gimn">Грядущие нам открывают года.</p>
+                        <p id="gimn">Нам силу даёт наша верность Отчизне.</p>
+                        <p id="gimn">Так было, так есть и так будет всегда!</p>
+                        <br>
+                        <p id="gimn">Славься, Отечество наше свободное,</p>
+                        <p id="gimn">Братских народов союз вековой,</p>
+                        <p id="gimn">Предками данная мудрость народная!</p>
+                        <p id="gimn">Славься, страна! Мы гордимся тобой!</p>
                     </div>
                     <br>
                     <h3>Гимн России инструментал</h3>
@@ -392,7 +392,16 @@
                     &copy; 2020-2021 ООО "СССР"
                     <script src="https://yastatic.net/share2/share.js"></script>
                     <div class="ya-share2" data-curtain data-services="messenger,vkontakte,odnoklassniki,telegram">
+
                     </div>
+                    <br>
+                    <!-- Yandex.Metrika informer -->
+                    <a href="https://metrika.yandex.ru/stat/?id=73002322&amp;from=informer" target="_blank"
+                        rel="nofollow"><img
+                            src="https://informer.yandex.ru/informer/73002322/3_1_545C70FF_343C50FF_1_pageviews"
+                            style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика"
+                            title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" /></a>
+                    <!-- /Yandex.Metrika informer -->
                 </div>
                 <div class="col-sm">
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
