--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -34,30 +34,33 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Post Soviet space <img src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg" alt="" class="dre"> </a>
-  
+        <a href="/political-na-postsovet-space/">Post Soviet space <img
+                src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg" alt="" class="dre">
+        </a>
+
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
-            <a href="/political-na-postsovet-space/country/russia/" >Россия</a>
+            <a href="/political-na-postsovet-space/country/russia/">Россия</a>
             <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
         <div class="nav-country">
-            <a href="/political-na-postsovet-space/country/russia/" >Основная информация</a>
+            <a href="/political-na-postsovet-space/country/russia/">Основная информация</a>
             <a href="gos-simvolika/">Государственная символика</a>
             <a href="russian-tradition/">Наши русские традиции</a>
             <a href="/political-na-postsovet-space/country/russia/president/">Президент</a>
         </div>
     </header>
     <main>
-        <iframe src="https://datalens.yandex/r955h4jb7k6qn?_embedded=1&_theme=dark" width="100%" height="300" frameborder="0"></iframe>
+        <iframe src="https://datalens.yandex/r955h4jb7k6qn?_embedded=1&_theme=dark" width="100%" height="300"
+            frameborder="0"></iframe>
         <div class="container">
 
             <h1 id="russia">Россия</h1>
-           <hr>
+            <hr>
             <p>
                 Россия, другое официальное название — Российская Федерация (РФ), — государство в Восточной
                 Европе и Северной Азии. Территория России в её конституционных границах составляет 17 125 191
@@ -250,66 +253,72 @@
                     Приведу в виде таблице, чем мы Россияне лучше Пиндосов:
                 </p>
                 <div class="wer">
-                <table border="1" rules="all" class="table  table-bordered wer">
-                    <thead class="table-primary">
-                        <th style="width: 10px;">№</th>
-                        <th style="width: 50px;">Критерий для сравнения</th>
-                        <th style="width: 50px;">Россия</th>
-                        <th style="width: 50px;">США</th>
-                    </thead>
-                    <tbody class="ussr">
-                        <tr>
-                            <td>1</td>
-                            <td>Вакцина от Короновируса</td>
-                            <td>Мы произвели первую вакцину в мире "Спутник V" и с серидины декабря 2020 года начали
-                                вакцинирование населения.</td>
-                            <td>Вакцина от компании Pfizer сначала была очень недоработанной.</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>Налогооблажение на товары</td>
-                            <td>У нас стоимость продукта которая написана на ценнике будет такая как и на кассе, т.к.
-                                НДС
-                                хоть и 20%, но он входит в стоимость товара.</td>
-                            <td>Налогооблажение в США чуть по-другому, например 1 кг яблок стоит 25$, но на кассе цена
-                                будет
-                                другая это зависит от налога в каждом штате.</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>Преступность</td>
-                            <td>Да в Росси тоже есть преступнеость, но она ниже чем в США. Потому что наша Полиция может
-                                появиться везде, даже в самом опасном районе.</td>
-                            <td>В США преступность выше и их полиция не отличается храбростью, как наша. Из-за этого по
-                                моему мнению в США преступность выше.</td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td>Отношение к другим нациям, рассам и т.д.</td>
-                            <td>
-                                Россия - это многонациональная страна. У нас есть, и Китайцы, и чернокожие. Согласно
-                                статье
-                                19 пункт 2 Конституции Российской Федерации говориться:
-                                <i>
-                                    "Государство гарантирует равенство прав и свобод человека
-                                    и гражданина независимо от пола, расы, национальности, языка,
-                                    происхождения, имущественного и должностного положения, места
-                                    жительства, отношения к религии, убеждений, принадлежности
-                                    к общественным объединениям, а также других обстоятельств.
-                                    Запрещаются любые формы ограничения прав граждан по признакам
-                                    социальной, расовой, национальной, языковой или религиозной
-                                    принадлежности."
+                    <table border="1" rules="all" class="table  table-bordered wer">
+                        <thead class="table-primary">
+                            <th style="width: 10px;">№</th>
+                            <th style="width: 50px;">Критерий для сравнения</th>
+                            <th style="width: 50px;">Россия</th>
+                            <th style="width: 50px;">США</th>
+                        </thead>
+                        <tbody class="ussr">
+                            <tr>
+                                <td>1</td>
+                                <td>Вакцина от Короновируса</td>
+                                <td>Мы произвели первую вакцину в мире "Спутник V" и с серидины декабря 2020 года начали
+                                    вакцинирование населения.</td>
+                                <td>Вакцина от компании Pfizer сначала была очень недоработанной.</td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>Налогооблажение на товары</td>
+                                <td>У нас стоимость продукта которая написана на ценнике будет такая как и на кассе,
+                                    т.к.
+                                    НДС
+                                    хоть и 20%, но он входит в стоимость товара.</td>
+                                <td>Налогооблажение в США чуть по-другому, например 1 кг яблок стоит 25$, но на кассе
+                                    цена
+                                    будет
+                                    другая это зависит от налога в каждом штате.</td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>Преступность</td>
+                                <td>Да в Росси тоже есть преступнеость, но она ниже чем в США. Потому что наша Полиция
+                                    может
+                                    появиться везде, даже в самом опасном районе.</td>
+                                <td>В США преступность выше и их полиция не отличается храбростью, как наша. Из-за этого
+                                    по
+                                    моему мнению в США преступность выше.</td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>Отношение к другим нациям, рассам и т.д.</td>
+                                <td>
+                                    Россия - это многонациональная страна. У нас есть, и Китайцы, и чернокожие. Согласно
+                                    статье
+                                    19 пункт 2 Конституции Российской Федерации говориться:
+                                    <i>
+                                        "Государство гарантирует равенство прав и свобод человека
+                                        и гражданина независимо от пола, расы, национальности, языка,
+                                        происхождения, имущественного и должностного положения, места
+                                        жительства, отношения к религии, убеждений, принадлежности
+                                        к общественным объединениям, а также других обстоятельств.
+                                        Запрещаются любые формы ограничения прав граждан по признакам
+                                        социальной, расовой, национальной, языковой или религиозной
+                                        принадлежности."
 
-                                </i>
-                            </td>
-                            <td>В США последнее время, особенно в 2020 году, белые начинают изгонять Афро-американцев. Я
-                                хочк задать вопрос Конгрессу США: "Вы что совсем сума сошли? Или у вас, как у нас нет
-                                законов
-                                в которых говориться что все равны и не важно какой ты рассы"</td>
-                        </tr>
+                                    </i>
+                                </td>
+                                <td>В США последнее время, особенно в 2020 году, белые начинают изгонять
+                                    Афро-американцев. Я
+                                    хочк задать вопрос Конгрессу США: "Вы что совсем сума сошли? Или у вас, как у нас
+                                    нет
+                                    законов
+                                    в которых говориться что все равны и не важно какой ты рассы"</td>
+                            </tr>
 
-                    </tbody>
-                </table>
+                        </tbody>
+                    </table>
                 </div>
                 <p>Это еще не все все остальное будет добавляться в таблицу.</p>
                 <h3>Нас обвиняют во вмешательство в выборы в США</h3>
@@ -368,8 +377,16 @@
                 <div class="col-sm">
                     &copy; 2020-2021 ООО "СССР"
                     <script src="https://yastatic.net/share2/share.js"></script>
-                    <div class="ya-share2" data-curtain 
-                        data-services="messenger,vkontakte,odnoklassniki,telegram"></div>
+                    <div class="ya-share2" data-curtain data-services="messenger,vkontakte,odnoklassniki,telegram">
+                    </div>
+                    <br>
+                    <!-- Yandex.Metrika informer -->
+                    <a href="https://metrika.yandex.ru/stat/?id=73002322&amp;from=informer" target="_blank"
+                        rel="nofollow"><img
+                            src="https://informer.yandex.ru/informer/73002322/3_1_545C70FF_343C50FF_1_pageviews"
+                            style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика"
+                            title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" /></a>
+                    <!-- /Yandex.Metrika informer -->
                 </div>
                 <div class="col-sm">
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
