--- a/country/russia/president/index.html
+++ b/country/russia/president/index.html
@@ -25,8 +25,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/political-na-postsovet-space/country/russia/css/style.css">
     <link rel="stylesheet" href="/political-na-postsovet-space/country/russia/css/president.css">
-    <link rel="shortcut icon" href="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg"
->
+    <link rel="shortcut icon" href="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
     <title>Президент России</title>
@@ -35,12 +34,14 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство <img src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg" alt="" class="dre"> </a>
+        <a href="/political-na-postsovet-space/">Постсоветское пространство <img
+                src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg" alt="" class="dre">
+        </a>
         <a href="/political-na-postsovet-space/country/">Страны</a>
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
-            <a href="/political-na-postsovet-space/country/russia/" >Россия</a>
+            <a href="/political-na-postsovet-space/country/russia/">Россия</a>
             <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
@@ -49,7 +50,7 @@
             <a href="/political-na-postsovet-space/country/russia/">Основная информация</a>
             <a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственная символика </a>
             <a href="/political-na-postsovet-space/country/russia/russian-tradition/">Наши русские традиции</a>
-            <a href="/political-na-postsovet-space/country/russia/president/" >Президент </a>
+            <a href="/political-na-postsovet-space/country/russia/president/">Президент </a>
         </div>
     </header>
     <main>
@@ -495,111 +496,111 @@
                 <br><br><br><br><br><br><br><br><br><br><br><br>
                 <h2>Список президентов РФ</h2>
                 <div class="wer">
-                <table border="1" rules="all" class="table  table-bordered ty" style="width: 100%;">
-                    <thead class="table-primary">
-                        <tr>
-                            <th scope="col">№ </th>
-                            <th scope="col">Срок</th>
+                    <table border="1" rules="all" class="table  table-bordered ty" style="width: 100%;">
+                        <thead class="table-primary">
+                            <tr>
+                                <th scope="col">№ </th>
+                                <th scope="col">Срок</th>
 
-                            <th scope="col"> Имя <br> Отчество <br> Фамилия <br> (Год жизни)</th>
-                            <th scope="col" colspan="2">Срок полномочий</th>
-                            <th scope="col">Срок в годах и месяцах</th>
-                            <th scope="col">Партия</th>
+                                <th scope="col"> Имя <br> Отчество <br> Фамилия <br> (Год жизни)</th>
+                                <th scope="col" colspan="2">Срок полномочий</th>
+                                <th scope="col">Срок в годах и месяцах</th>
+                                <th scope="col">Партия</th>
 
-                        </tr>
-                    </thead>
-                    <tbody class="ussr">
-                        <tr>
-                            <th scope="row" rowspan="2" >1</th>
-                            <td>1</td>
+                            </tr>
+                        </thead>
+                        <tbody class="ussr">
+                            <tr>
+                                <th scope="row" rowspan="2">1</th>
+                                <td>1</td>
 
-                            <td rowspan="2"><a target="_blank"
-                                    href="https://ru.wikipedia.org/wiki/Ельцин,_Борис_Николаевич">Борис <br>
-                                    Николаевич <br> Ельцин</a> <br> (1931—2007)</td>
-                            <td>10 июля 1991</td>
-                            <td>9 августа 1996</td>
-                            <td>4 года <br> 7 месяцев <br> 9 дней</td>
-                            <td  rowspan="5" style="background: red;">Беспартийный</td>
+                                <td rowspan="2"><a target="_blank"
+                                        href="https://ru.wikipedia.org/wiki/Ельцин,_Борис_Николаевич">Борис <br>
+                                        Николаевич <br> Ельцин</a> <br> (1931—2007)</td>
+                                <td>10 июля 1991</td>
+                                <td>9 августа 1996</td>
+                                <td>4 года <br> 7 месяцев <br> 9 дней</td>
+                                <td rowspan="5" style="background: red;">Беспартийный</td>
 
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>9 августа 1996</td>
-                            <td>31 декабря 1999</td>
-                            <td>3 года <br> 4 месяца <br> 22 дня</td>
-                        </tr>
-                        <tr>
-                            <th scope="row" >-</th>
-                            <td>-</td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>9 августа 1996</td>
+                                <td>31 декабря 1999</td>
+                                <td>3 года <br> 4 месяца <br> 22 дня</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">-</th>
+                                <td>-</td>
 
-                            <td>
-                                <a target="_blank"
-                                    href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир <br>
-                                    Владимирович <br> Путин</a> <br> <small>(исполняющий обязанности)</small>
-                            </td>
-                            <td>31 декабря 1999</td>
-                            <td>7 мая 2000</td>
-                            <td>4 месяцев <br> 1 неделя</td>
+                                <td>
+                                    <a target="_blank"
+                                        href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир <br>
+                                        Владимирович <br> Путин</a> <br> <small>(исполняющий обязанности)</small>
+                                </td>
+                                <td>31 декабря 1999</td>
+                                <td>7 мая 2000</td>
+                                <td>4 месяцев <br> 1 неделя</td>
 
 
-                        </tr>
-                        <tr>
-                            <th scope="row" rowspan="2">2</th>
-                            <td>1</td>
-                            <td rowspan="2"><a target="_blank"
-                                    href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
-                                    <br>
-                                    Владимирович <br> Путин</a> <br> (р. 1952)</td>
-                            <td>7 мая 2000</td>
-                            <td>7 мая 2004</td>
-                            <td>4 года</td>
+                            </tr>
+                            <tr>
+                                <th scope="row" rowspan="2">2</th>
+                                <td>1</td>
+                                <td rowspan="2"><a target="_blank"
+                                        href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
+                                        <br>
+                                        Владимирович <br> Путин</a> <br> (р. 1952)</td>
+                                <td>7 мая 2000</td>
+                                <td>7 мая 2004</td>
+                                <td>4 года</td>
 
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>7 мая 2004</td>
-                            <td>7 мая 2008</td>
-                            <td>4 года</td>
-                        </tr>
-                        <tr>
-                            <th scope="row" >3</th>
-                            <td>1</td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>7 мая 2004</td>
+                                <td>7 мая 2008</td>
+                                <td>4 года</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">3</th>
+                                <td>1</td>
 
-                            <td><a target="_blank"
-                                    href="https://ru.wikipedia.org/wiki/Медведев,_Дмитрий_Анатольевич">Дмитрий <br>
-                                    Анатольевич <br>
-                                    Медведев</a> <br> (р. 1965)</td>
-                            <td>7 мая 2008</td>
-                            <td>7 мая 2012</td>
-                            <td>4 года</td>
-                            <td  rowspan="2" style="background: blue;">Единая Россия</td>
+                                <td><a target="_blank"
+                                        href="https://ru.wikipedia.org/wiki/Медведев,_Дмитрий_Анатольевич">Дмитрий <br>
+                                        Анатольевич <br>
+                                        Медведев</a> <br> (р. 1965)</td>
+                                <td>7 мая 2008</td>
+                                <td>7 мая 2012</td>
+                                <td>4 года</td>
+                                <td rowspan="2" style="background: blue;">Единая Россия</td>
 
-                        </tr>
-                        <tr>
-                            <th scope="row" ">4</th>
+                            </tr>
+                            <tr>
+                                <th scope="row" ">4</th>
                             <td>3</td>
 
                             </td>
-                            <td rowspan="2"><a target="_blank"
-                                    href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
-                                    <br>
-                                    Владимирович <br> Путин</a> <br> (р. 1952)</td>
-                            <td>7 мая 2012</td>
-                            <td>7 мая 2018</td>
-                            <td>6 лет</td>
+                            <td rowspan=" 2"><a target="_blank"
+                                        href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
+                                        <br>
+                                        Владимирович <br> Путин</a> <br> (р. 1952)</td>
+                                <td>7 мая 2012</td>
+                                <td>7 мая 2018</td>
+                                <td>6 лет</td>
 
-                        </tr>
-                        <tr>
-                            <td >4</td>
-                            <td>4
-                            </td>
-                            <td>7 мая 2018</td>
-                            <td>срок истекает <br> 7 мая 2024</td>
-                            <td>6 лет</td>
-                            <td style="background: red;">Беспартийный</td>
-                        </tr>
-                    </tbody>
-                </table>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>4
+                                </td>
+                                <td>7 мая 2018</td>
+                                <td>срок истекает <br> 7 мая 2024</td>
+                                <td>6 лет</td>
+                                <td style="background: red;">Беспартийный</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
 
@@ -615,18 +616,17 @@
                         Николаевич Ельцин </figcaption>
                 </div>
                 <div class="putin">
-                    <img src="/political-na-postsovet-space/country/russia/president/Vladimir_Putin_17_July_2000-1.jpg" alt=""
-                        class="pres">
+                    <img src="/political-na-postsovet-space/country/russia/president/Vladimir_Putin_17_July_2000-1.jpg"
+                        alt="" class="pres">
                     <figcaption>Владимир Владимирович Путин <br> <i>(1 и 2 президентские сроки)</i></figcaption>
                 </div>
                 <div class="medvedev">
-                    <img src="medvedev.jpg" alt=""
-                        class="pres">
+                    <img src="medvedev.jpg" alt="" class="pres">
                     <figcaption>Дмитрий <br> Анатольевич Медведев</figcaption>
                 </div>
                 <div class="putin">
-                    <img src="/political-na-postsovet-space/country/russia/president/Путин_23.12.20.jpg"
-                        alt="" class="pres">
+                    <img src="/political-na-postsovet-space/country/russia/president/Путин_23.12.20.jpg" alt=""
+                        class="pres">
                     <figcaption>Владимир Владимирович Путин <br><i>(3 и 4 президентские сроки)</i></figcaption>
                 </div>
             </div>
@@ -671,8 +671,16 @@
                 <div class="col-sm">
                     &copy; 2020-2021 ООО "СССР"
                     <script src="https://yastatic.net/share2/share.js"></script>
-                    <div class="ya-share2" data-curtain 
-                        data-services="messenger,vkontakte,odnoklassniki,telegram"></div>
+                    <div class="ya-share2" data-curtain data-services="messenger,vkontakte,odnoklassniki,telegram">
+                    </div>
+                    <br>
+                    <!-- Yandex.Metrika informer -->
+                    <a href="https://metrika.yandex.ru/stat/?id=73002322&amp;from=informer" target="_blank"
+                        rel="nofollow"><img
+                            src="https://informer.yandex.ru/informer/73002322/3_1_545C70FF_343C50FF_1_pageviews"
+                            style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика"
+                            title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" /></a>
+                    <!-- /Yandex.Metrika informer -->
                 </div>
 
                 <div class="col-sm">
