--- a/country/russia/russian-tradition/index.html
+++ b/country/russia/russian-tradition/index.html
@@ -71,7 +71,8 @@
                 <p>В Россию можно только верить.</p>
             </div>
             <div class="flags">
-                <h2> <a href="/political-na-postsovet-space/country/russia/russian-tradition/russian-kithen/" class="russika-kyxna"> Русская
+                <h2> <a href="/political-na-postsovet-space/country/russia/russian-tradition/russian-kithen/"
+                        class="russika-kyxna"> Русская
                         кухня </a></h2>
                 <hr>
                 <div class="photol">
@@ -151,6 +152,14 @@
                     <script src="https://yastatic.net/share2/share.js"></script>
                     <div class="ya-share2" data-curtain data-services="messenger,vkontakte,odnoklassniki,telegram">
                     </div>
+                    <br>
+                    <!-- Yandex.Metrika informer -->
+                    <a href="https://metrika.yandex.ru/stat/?id=73002322&amp;from=informer" target="_blank"
+                        rel="nofollow"><img
+                            src="https://informer.yandex.ru/informer/73002322/3_1_545C70FF_343C50FF_1_pageviews"
+                            style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика"
+                            title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" /></a>
+                    <!-- /Yandex.Metrika informer -->
                 </div>
                 <div class="col-sm">
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
@@ -160,7 +169,7 @@
                             Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
                 </div>
-            
+
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
