--- a/country/russia/russian-tradition/russian-kithen/index.html
+++ b/country/russia/russian-tradition/russian-kithen/index.html
@@ -35,13 +35,14 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство <img src="grecha-s-sosisonami/scale_1200.webp" alt="" class="dre"> </a>
-       
-        <a href="/political-na-postsovet-space/country/" >Страны</a>
+        <a href="/political-na-postsovet-space/">Постсоветское пространство <img
+                src="grecha-s-sosisonami/scale_1200.webp" alt="" class="dre"> </a>
+
+        <a href="/political-na-postsovet-space/country/">Страны</a>
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
-            <a href="/political-na-postsovet-space/country/russia/" >Россия</a>
+            <a href="/political-na-postsovet-space/country/russia/">Россия</a>
             <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
@@ -50,10 +51,10 @@
             <a href="/political-na-postsovet-space/country/russia/">Основная информация</a>
 
             <a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственная символика</a>
-            <a href="/political-na-postsovet-space/country/russia/russian-tradition/" >Наши русские традиции</a>
+            <a href="/political-na-postsovet-space/country/russia/russian-tradition/">Наши русские традиции</a>
             <a href="/political-na-postsovet-space/country/russia/president/">Президент</a>
         </div>
-       
+
     </header>
     <main>
         <div class="container">
@@ -410,9 +411,18 @@
                 <div class="col-sm">
                     &copy; 2020-2021 ООО "СССР"
                     <script src="https://yastatic.net/share2/share.js"></script>
-                    <div class="ya-share2" data-curtain 
-                        data-services="messenger,vkontakte,odnoklassniki,telegram"></div>
+                    <div class="ya-share2" data-curtain data-services="messenger,vkontakte,odnoklassniki,telegram">
+                    </div>
+                    <br>
+                    <!-- Yandex.Metrika informer -->
+                    <a href="https://metrika.yandex.ru/stat/?id=73002322&amp;from=informer" target="_blank"
+                        rel="nofollow"><img
+                            src="https://informer.yandex.ru/informer/73002322/3_1_545C70FF_343C50FF_1_pageviews"
+                            style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика"
+                            title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" /></a>
+                    <!-- /Yandex.Metrika informer -->
                 </div>
+
                 <div class="col-sm">
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
                     <p><a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a></p>
